--- a/wiki/cs/About_FreeCAD.html
+++ b/wiki/cs/About_FreeCAD.html
@@ -44,7 +44,7 @@
 </p><p><span id="About_the_FPA"></span>
 </p>
 <h3><span class="mw-headline" id="O_FPA">O FPA</span></h3>
-<p>Projekt FreeCADu je tak&eacute; podporov&aacute;n neziskovou organizac&iacute; <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FreeCAD project association (FPA)</a>. FPA je nez&aacute;visl&yacute; org&aacute;n zalo&#382;en&yacute; v roce 2021 n&#283;kolika veter&aacute;ny FreeCADu za &uacute;&#269;elem shroma&#382;&#271;ov&aacute;n&iacute; <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">dar&#367;</a> a dal&scaron;&iacute;ch zdroj&#367; na podporu projektu a jeho komunity, ochrany t&eacute;to komunity a umo&#382;n&#283;n&iacute; jej&iacute;ho dal&scaron;&iacute;ho rozvoje v co nejlep&scaron;&iacute;ch podm&iacute;nk&aacute;ch, a tak&eacute; za &uacute;&#269;elem zastupov&aacute;n&iacute; projektu v&#367;&#269;i jin&yacute;m org&aacute;n&#367;m, jako jsou spole&#269;nosti a instituce.
+<p>Projekt FreeCADu je tak&eacute; podporov&aacute;n neziskovou organizac&iacute; <a rel="nofollow" class="external text" href="https://fpa.freecad.org">FreeCAD project association (FPA)</a>. FPA je nez&aacute;visl&yacute; org&aacute;n zalo&#382;en&yacute; v roce 2021 n&#283;kolika veter&aacute;ny FreeCADu za &uacute;&#269;elem shroma&#382;&#271;ov&aacute;n&iacute; <a href="../Donate.html" title="Donate">dar&#367;</a> a dal&scaron;&iacute;ch zdroj&#367; na podporu projektu a jeho komunity, ochrany t&eacute;to komunity a umo&#382;n&#283;n&iacute; jej&iacute;ho dal&scaron;&iacute;ho rozvoje v co nejlep&scaron;&iacute;ch podm&iacute;nk&aacute;ch, a tak&eacute; za &uacute;&#269;elem zastupov&aacute;n&iacute; projektu v&#367;&#269;i jin&yacute;m org&aacute;n&#367;m, jako jsou spole&#269;nosti a instituce.
 </p><p><br>
 </p>
 <div class="docnav">
@@ -63,18 +63,18 @@
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
 <li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
-<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
+<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../cs/External_workbenches.html" title="External workbenches/cs">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
 <ul><li><b>Hubs:</b> <a href="../cs/User_hub.html" title="User hub/cs">User hub</a>, <a href="../cs/Power_users_hub.html" title="Power users hub/cs">Power users hub</a>, <a href="../cs/Developer_hub.html" title="Developer hub/cs">Developer hub</a></li></ul></div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118062722
+Cached time: 20260122210611
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.076 seconds
-Real time usage: 0.121 seconds
+CPU time usage: 0.074 seconds
+Real time usage: 0.263 seconds
 Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 7144/2097152 bytes
 Template argument size: 2321/2097152 bytes
@@ -85,13 +85,13 @@ Unstrip post&#8208;expand size: 4237/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.447      1 -total
- 71.84%    6.787      1 Template:Userdocnavi/cs
- 33.52%    3.167      1 Template:Navigation_menu_2
- 25.62%    2.420      2 Template:Docnav
+100.00%   21.146      1 -total
+ 81.82%   17.302      1 Template:Userdocnavi/cs
+ 39.61%    8.375      1 Template:Navigation_menu_2
+ 17.34%    3.667      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13038-0!canonical and timestamp 20260118062721 and revision id 1739801. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13038-0!canonical and timestamp 20260122210610 and revision id 1742787. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
