--- a/wiki/cs/Manual;Introduction.html
+++ b/wiki/cs/Manual;Introduction.html
@@ -7,7 +7,7 @@
 <li><a href="../Manual;Introduction/ca.html" class="mw-pt-progress mw-pt-progress--low" title="Manual: Introducci&oacute; (14% translated)" lang="ca" dir="ltr">catal&agrave;</a></li>
 <li><a href="../es/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="Manual:Introducci&oacute;n (100% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuel : Introduction (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="../Manual;Introduction/gl.html" class="mw-pt-progress mw-pt-progress--low" title="Manual:Introduction/gl (14% translated)" lang="gl" dir="ltr">galego</a></li>
+<li><a href="../Manual;Introduction/gl.html" class="mw-pt-progress mw-pt-progress--med" title="Manual: Introducci&oacute;n (43% translated)" lang="gl" dir="ltr">galego</a></li>
 <li><a href="../hr/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--low" title="Priru&#269;nik:Uvod (14% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuale: Introduzione (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../hu/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="K&eacute;zik&ouml;nyv: Bevezet&eacute;s (100% translated)" lang="hu" dir="ltr">magyar</a></li>
@@ -24,7 +24,7 @@
 <li><a href="../ko/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="&#47588;&#45684;&#50620;:&#49548;&#44060; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
-    <div><a href="../index.php?title=Manual;What_is_FreeCAD/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Manual:What is FreeCAD/cs (page does not exist)">Manual:Co je FreeCAD</a>
+    <div><a href="../cs/Manual;What_is_FreeCAD.html" title="Manual:What is FreeCAD/cs">Manual:Co je FreeCAD</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a class="mw-selflink selflink">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
@@ -86,36 +86,36 @@
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
-    <div><a href="../index.php?title=Manual;What_is_FreeCAD/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Manual:What is FreeCAD/cs (page does not exist)">Manual:Co je FreeCAD</a>
+    <div><a href="../cs/Manual;What_is_FreeCAD.html" title="Manual:What is FreeCAD/cs">Manual:Co je FreeCAD</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a class="mw-selflink selflink">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112013500
+Cached time: 20260122211030
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.064 seconds
-Real time usage: 0.123 seconds
+CPU time usage: 0.072 seconds
+Real time usage: 0.172 seconds
 Preprocessor visited node count: 63/1000000
 Post&#8208;expand include size: 7826/2097152 bytes
 Template argument size: 464/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4360/5000000 bytes
+Unstrip post&#8208;expand size: 4359/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.389      1 -total
- 65.10%    6.763      1 Template:Manual:TOC
- 43.67%    4.537      1 Manual:Summary/cs
- 31.26%    3.247      2 Template:Docnav
+100.00%   19.473      1 -total
+ 56.40%   10.982      2 Template:Docnav
+ 41.25%    8.032      1 Template:Manual:TOC
+ 28.89%    5.625      1 Manual:Summary/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260112013500 and revision id 1736844. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260122211030 and revision id 1736844. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
