--- a/wiki/fr/Workbench_creation.html
+++ b/wiki/fr/Workbench_creation.html
@@ -202,7 +202,7 @@ Un autre paragraphe a &eacute;t&eacute; cr&eacute;&eacute; pour d&eacute;crire l
 </p><p><span id="C++_workbenches"></span>
 </p>
 <h3><span id="Ateliers_en_C.2B.2B"></span><span class="mw-headline" id="Ateliers_en_C++">Ateliers en C++</span></h3>
-<p>Si vous voulez coder votre atelier en C++, vous souhaiterez probablement coder aussi sa d&eacute;finition elle-m&ecirc;me en C++ (bien que cela ne soit pas n&eacute;cessaire&nbsp;: vous pouvez &eacute;galement coder uniquement les outils en C++, et laisser la d&eacute;finition de de l'atelier en Python). Dans ce cas, le fichier InitGui.py devient tr&egrave;s simple&nbsp;: il peut contenir une seule ligne&nbsp;:
+<p>Si vous voulez coder votre atelier en C++, vous souhaiterez probablement coder aussi sa d&eacute;finition elle-m&ecirc;me en C++ (bien que cela ne soit pas n&eacute;cessaire&nbsp;: vous pouvez &eacute;galement coder uniquement les outils en C++, et laisser la d&eacute;finition de l'atelier en Python). Dans ce cas, le fichier InitGui.py devient tr&egrave;s simple&nbsp;: il peut contenir une seule ligne&nbsp;:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="kn">import</span> <span class="nn">MyModuleGui</span>
 </pre></div>
@@ -423,12 +423,12 @@ Un autre paragraphe a &eacute;t&eacute; cr&eacute;&eacute; pour d&eacute;crire l
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122113234
+Cached time: 20260122220318
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.151 seconds
 Preprocessor visited node count: 474/1000000
 Post&#8208;expand include size: 10922/2097152 bytes
 Template argument size: 13337/2097152 bytes
@@ -439,19 +439,19 @@ Unstrip post&#8208;expand size: 32836/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.745      1 -total
- 20.87%    6.208      1 Template:Powerdocnavi/fr
- 19.21%    5.713     12 Template:Code
-  9.61%    2.858      1 Template:Navigation_menu_2
-  8.26%    2.458      1 Template:TOCright
-  7.74%    2.303      2 Template:Docnav/fr
-  6.90%    2.052      1 Template:VeryImportantMessage
-  6.81%    2.026      1 Template:MenuCommand
-  6.60%    1.962      1 Template:VersionPlus/fr
-  5.83%    1.733      5 Template:FileName
+100.00%   30.933      1 -total
+ 24.10%    7.455      1 Template:Powerdocnavi/fr
+ 14.80%    4.577     12 Template:Code
+ 10.35%    3.200      1 Template:Navigation_menu_2
+  8.47%    2.619      1 Template:VeryImportantMessage
+  8.42%    2.604     10 Template:Incode
+  8.14%    2.518      1 Template:VersionPlus/fr
+  7.85%    2.429      2 Template:Docnav/fr
+  6.87%    2.125      5 Template:FileName
+  5.81%    1.796      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69748-0!canonical and timestamp 20260122113233 and revision id 1742339. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69748-0!canonical and timestamp 20260122220317 and revision id 1742791. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
