--- a/wiki/Installing_on_Windows.html
+++ b/wiki/Installing_on_Windows.html
@@ -18,7 +18,7 @@
 <li><a href="ru/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--med" title="&#1059;&#1089;&#1090;&#1072;&#1085;&#1086;&#1074;&#1082;&#1072; &#1074; Windows (64% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="uk/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="Installing on Windows/uk (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="zh/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="&#22312;Windows&#29615;&#22659;&#20013;&#23433;&#35013; (0% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
-<li><a href="zh-cn/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="&#22312; Windows &#19978;&#23433;&#35013; (12% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
+<li><a href="zh-cn/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--med" title="&#22312; Windows &#19978;&#23433;&#35013; (16% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="ja/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--med" title="Install on Windows/Windows&#19978;&#12391;&#12398;FreeCAD&#12398;&#12452;&#12531;&#12473;&#12488;&#12540;&#12523; (16% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="ko/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--complete" title="&#50952;&#46020;&#50864;&#50640; &#49444;&#52824;&#54616;&#44592; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
@@ -102,12 +102,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205840
+Cached time: 20260123002632
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.163 seconds
+CPU time usage: 0.073 seconds
+Real time usage: 0.089 seconds
 Preprocessor visited node count: 275/1000000
 Post&#8208;expand include size: 7516/2097152 bytes
 Template argument size: 2335/2097152 bytes
@@ -118,17 +118,17 @@ Unstrip post&#8208;expand size: 5316/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.539      1 -total
- 33.46%    6.873      1 Template:Userdocnavi
- 23.00%    4.723      2 Template:Docnav
- 14.71%    3.021      6 Template:Code
- 11.91%    2.447      3 Template:FileName
- 11.79%    2.422      1 Template:Navigation_menu_2
-  6.41%    1.317      1 Template:Incode
-  5.90%    1.212      1 Template:TOCright
+100.00%   10.075      1 -total
+ 26.76%    2.696      1 Template:Userdocnavi
+ 22.95%    2.312      6 Template:Code
+ 17.33%    1.746      2 Template:Docnav
+ 17.16%    1.729      1 Template:Navigation_menu_2
+  9.06%    0.913      3 Template:FileName
+  8.43%    0.849      1 Template:Incode
+  8.05%    0.811      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61-0!canonical and timestamp 20260111205840 and revision id 1732372. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61-0!canonical and timestamp 20260123002632 and revision id 1732372. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
