--- a/wiki/Talk;Release_notes_1.0.html
+++ b/wiki/Talk;Release_notes_1.0.html
@@ -1,29 +1,2 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Talk:Release notes 1.0</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-heading mw-heading2 ext-discussiontools-init-section"><!--__DTSUBSCRIBEBUTTONDESKTOP__{&quot;headingLevel&quot;:2,&quot;name&quot;:&quot;h-213.122.223.42-20260123001000&quot;,&quot;type&quot;:&quot;heading&quot;,&quot;level&quot;:0,&quot;id&quot;:&quot;h-car-20260123001000&quot;,&quot;replies&quot;:[&quot;c-213.122.223.42-20260123001000-car&quot;],&quot;text&quot;:&quot;car&quot;,&quot;linkableTitle&quot;:&quot;car&quot;}--><h2 data-mw-thread-id="h-car-20260123001000"><span class="mw-headline" id="car"><span data-mw-comment-start="" id="h-car-20260123001000"></span>car<span data-mw-comment-end="h-car-20260123001000"></span></span></h2><div class="ext-discussiontools-init-section-bar"><div class="ext-discussiontools-init-section-metadata"><span class="ext-discussiontools-init-section-metaitem ext-discussiontools-init-section-timestampLabel">Latest comment: <a href="#c-213.122.223.42-20260123001000-car">just now</a></span><span class="ext-discussiontools-init-section-metaitem ext-discussiontools-init-section-commentCountLabel">1 comment</span><span class="ext-discussiontools-init-section-metaitem ext-discussiontools-init-section-authorCountLabel">1 person in discussion</span></div><div class="ext-discussiontools-init-section-actions"><!--__DTSUBSCRIBEBUTTONMOBILE__{&quot;headingLevel&quot;:2,&quot;name&quot;:&quot;h-213.122.223.42-20260123001000&quot;,&quot;type&quot;:&quot;heading&quot;,&quot;level&quot;:0,&quot;id&quot;:&quot;h-car-20260123001000&quot;,&quot;replies&quot;:[&quot;c-213.122.223.42-20260123001000-car&quot;],&quot;text&quot;:&quot;car&quot;,&quot;linkableTitle&quot;:&quot;car&quot;}--></div></div></div>
-<p><span data-mw-comment-start="" id="c-213.122.223.42-20260123001000-car"></span>ever <a href="Special;Contributions/213.122.223.42.html" title="Special:Contributions/213.122.223.42">213.122.223.42</a> <a href="http://wiki.freecad.org/Talk:Release_notes_1.0#c-213.122.223.42-20260123001000-car" class="ext-discussiontools-init-timestamplink">00:10, 23 January 2026 (UTC)</a><span class="ext-discussiontools-init-replylink-buttons" data-mw-thread-id="c-213.122.223.42-20260123001000-car"><span id="ooui-php-1" class="ext-discussiontools-init-replybutton oo-ui-widget oo-ui-widget-enabled oo-ui-buttonElement oo-ui-buttonElement-frameless oo-ui-labelElement oo-ui-flaggedElement-progressive oo-ui-buttonWidget" data-ooui='{"_":"OO.ui.ButtonWidget","rel":["nofollow"],"framed":false,"label":"Reply","flags":["progressive"],"classes":["ext-discussiontools-init-replybutton"]}'><a role="button" tabindex="0" rel="nofollow" class="oo-ui-buttonElement-button"><span class="oo-ui-iconElement-icon oo-ui-iconElement-noIcon oo-ui-image-progressive"></span><span class="oo-ui-labelElement-label">Reply</span><span class="oo-ui-indicatorElement-indicator oo-ui-indicatorElement-noIndicator oo-ui-image-progressive"></span></a></span></span><span data-mw-comment-end="c-213.122.223.42-20260123001000-car"></span>
-</p>
-<!-- 
-NewPP limit report
-Cached time: 20260123001005
-Cache expiry: 86400
-Reduced expiry: false
-Complications: [user&#8208;signature]
-DiscussionTools time usage: 0.002 seconds
-CPU time usage: 0.003 seconds
-Real time usage: 0.003 seconds
-Preprocessor visited node count: 2/1000000
-Post&#8208;expand include size: 0/2097152 bytes
-Template argument size: 0/2097152 bytes
-Highest expansion depth: 2/100
-Expensive parser function count: 0/100
-Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 0/5000000 bytes
--->
-<!--
-Transclusion expansion time report (%,ms,calls,template)
-100.00%    0.000      1 -total
--->
-
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412381-0!canonical and timestamp 20260123001002 and revision id 1742793. Rendering was triggered because: edit-page
- -->
-</div>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Talk:Release notes 1.0</span></h1><?xml encoding="UTF-8">
 </div><script src="site.js"></script>
