--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Build Utility/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Build+Utility&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Dienstprogramm Zusammenbau (91% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Dienstprogramm Zusammenbau (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Build_Utility.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Build Utility (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Build Utility (94% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Build Utility (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Build_Utility.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Narz&#281;dzie do budowania (3% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -72,11 +72,11 @@ Build Utility
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro &egrave; destinata ad essere utilizzata su grandi progetti, quelli che coinvolgono centinaia di oggetti. &Egrave; inutile e superfluo utilizzarla su un piccolo progetto con un unico file. Su un grande progetto con molti oggetti e molti file da unire in quello finale, fa risparmiare tempo, evita le azioni ripetitive ed elimina gli errori umani.
 </p>
 </div>
@@ -343,30 +343,30 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251124160053
+Cached time: 20260123100911
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.103 seconds
+CPU time usage: 0.047 seconds
+Real time usage: 0.069 seconds
 Preprocessor visited node count: 234/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 9/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 10031/5000000 bytes
+Unstrip post&#8208;expand size: 10041/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.382      1 -total
- 46.86%    7.677      1 Template:Macro/it
- 25.03%    4.100      7 Template:Code
- 12.22%    2.002      1 Template:MacroCode
-  8.38%    1.373      1 Template:Clear
+100.00%   12.601      1 -total
+ 35.01%    4.412      1 Template:Macro/it
+ 26.88%    3.387      7 Template:Code
+ 18.78%    2.367      1 Template:MacroCode
+ 13.83%    1.742      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20251124160053 and revision id 1702350. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123100911 and revision id 1742795. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
