--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -75,11 +75,8 @@ Build Utility
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Questa macro &egrave; destinata ad essere utilizzata su grandi progetti, quelli che coinvolgono centinaia di oggetti. &Egrave; inutile e superfluo utilizzarla su un piccolo progetto con un unico file. Su un grande progetto con molti oggetti e molti file da unire in quello finale, fa risparmiare tempo, evita le azioni ripetitive ed elimina gli errori umani.
+<p>Questa macro &egrave; pensata per progetti di grandi dimensioni, che coinvolgono centinaia di oggetti. Il suo utilizzo su un piccolo progetto con un singolo file sarebbe inutile e superfluo. Tuttavia, su un progetto di grandi dimensioni con molti oggetti e molti file da unire nel progetto finale, far&agrave; risparmiare tempo, eviter&agrave; all'utente di dover eseguire azioni ripetitive e rimuover&agrave; gli errori umani.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 </div>
@@ -343,13 +340,13 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123100911
+Cached time: 20260123100949
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.047 seconds
-Real time usage: 0.069 seconds
-Preprocessor visited node count: 234/1000000
+CPU time usage: 0.045 seconds
+Real time usage: 0.083 seconds
+Preprocessor visited node count: 230/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
 Highest expansion depth: 7/100
@@ -359,14 +356,14 @@ Unstrip post&#8208;expand size: 10041/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.601      1 -total
- 35.01%    4.412      1 Template:Macro/it
- 26.88%    3.387      7 Template:Code
- 18.78%    2.367      1 Template:MacroCode
- 13.83%    1.742      1 Template:Clear
+100.00%   21.565      1 -total
+ 39.88%    8.599      1 Template:Macro/it
+ 24.10%    5.198      1 Template:MacroCode
+ 22.66%    4.887      7 Template:Code
+  8.44%    1.819      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123100911 and revision id 1742795. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123100949 and revision id 1742797. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
