--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -76,12 +76,11 @@ Build Utility
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Questa macro &egrave; pensata per progetti di grandi dimensioni, che coinvolgono centinaia di oggetti. Il suo utilizzo su un piccolo progetto con un singolo file sarebbe inutile e superfluo. Tuttavia, su un progetto di grandi dimensioni con molti oggetti e molti file da unire nel progetto finale, far&agrave; risparmiare tempo, eviter&agrave; all'utente di dover eseguire azioni ripetitive e rimuover&agrave; gli errori umani.
+</p><p><span id="Installation"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Installation">Installation</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Installazione_2">Installazione</span></h2>
 <p>Tutto il codice di buildUtility.FCMacro &egrave; contenuto in una macro, quindi per installarla basta copiare il suo codice nella appropriata directory delle Macro. Dopo, si pu&ograve; invocare Build Utility dal menu Macro, dalla console Python o da un pulsante della barra degli strumenti (il metodo preferito).
 </p>
 <ul><li>per informazioni su come installare il codice delle macro vedere la pagina <a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a></li>
@@ -340,12 +339,12 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123100949
+Cached time: 20260123100955
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.083 seconds
+CPU time usage: 0.049 seconds
+Real time usage: 0.156 seconds
 Preprocessor visited node count: 230/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
@@ -356,14 +355,14 @@ Unstrip post&#8208;expand size: 10041/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.565      1 -total
- 39.88%    8.599      1 Template:Macro/it
- 24.10%    5.198      1 Template:MacroCode
- 22.66%    4.887      7 Template:Code
-  8.44%    1.819      1 Template:Clear
+100.00%   43.170      1 -total
+ 30.37%   13.110      1 Template:Clear
+ 30.08%   12.988      7 Template:Code
+ 25.67%   11.081      1 Template:Macro/it
+ 11.16%    4.816      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123100949 and revision id 1742797. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123100954 and revision id 1742799. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
