--- a/wiki/it/Macro_Build_Utility.html
+++ b/wiki/it/Macro_Build_Utility.html
@@ -86,9 +86,9 @@ Build Utility
 <ul><li>per informazioni su come installare il codice delle macro vedere la pagina <a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a></li>
 <li>per informazioni su come installarla abbinata a un pulsante in una barra degli strumenti vedere la pagina <a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la barra degli strumenti</a></li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <p>Build Utility lavora sugli stessi principi dei file di costruzione che vengono utilizzati per assemblare i grandi sistemi software (come FreeCAD). Si utilizza un editor di testo per creare un file di testo che aderisce ai formati richiesti da Build Utility, poi Build Utility legge semplicemente ogni riga del file di testo ed esegue le azioni specificate.
@@ -339,12 +339,12 @@ if len(buildFilePathName) &gt; 0:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123100955
+Cached time: 20260123101001
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.156 seconds
+CPU time usage: 0.051 seconds
+Real time usage: 0.069 seconds
 Preprocessor visited node count: 230/1000000
 Post&#8208;expand include size: 2730/2097152 bytes
 Template argument size: 5926/2097152 bytes
@@ -355,14 +355,14 @@ Unstrip post&#8208;expand size: 10041/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.170      1 -total
- 30.37%   13.110      1 Template:Clear
- 30.08%   12.988      7 Template:Code
- 25.67%   11.081      1 Template:Macro/it
- 11.16%    4.816      1 Template:MacroCode
+100.00%   14.063      1 -total
+ 32.42%    4.559      1 Template:Macro/it
+ 27.21%    3.827      7 Template:Code
+ 17.55%    2.468      1 Template:MacroCode
+ 16.54%    2.326      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123100954 and revision id 1742799. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55779-0!canonical and timestamp 20260123101000 and revision id 1742801. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
